Bug 66388 - xscope: wrong output for Xrandr "current filter name" field
Summary: xscope: wrong output for Xrandr "current filter name" field
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: App/other (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Alan Coopersmith
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-29 21:24 UTC by Alain Kalker
Modified: 2013-07-06 03:57 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Output of xscope showing wrong field value (28.28 KB, text/plain)
2013-06-29 21:24 UTC, Alain Kalker
no flags Details

Description Alain Kalker 2013-06-29 21:24:20 UTC
Created attachment 81725 [details]
Output of xscope showing wrong field value

Using xscope to trace the following commands:

$ DISPLAY=:1 xrandr --output VGA-0 --scale 0.5x0.5
$ DISPLAY=:1 xrandr --output VGA-0 --transform none

results in the following snippet (full log attached):
[snip]
 0.25: Client -->  108 bytes
	 ............REQUEST: RandrRequest
	        RANDRREQUEST: RandrSetScreenSize
	              window: WIN 00000255
	     width-in-pixels: 0320
	    height-in-pixels: 01c2
	width-in-millimeters: 00df
	height-in-millimeters: 0000
	 ............REQUEST: RandrRequest
	        RANDRREQUEST: RandrSetCrtcTransform
	                crtc: CRTC 00000239
	           transform:     0.50    0.00    0.00
	                          0.00    0.50    0.00
	                          0.00    0.00    1.00

	         filter name: "bilinear"
	 ............REQUEST: RandrRequest
	        RANDRREQUEST: RandrSetCrtcConfig
	                crtc: CRTC 00000239
	           timestamp: CurrentTime
	    config timestamp: TIM 00002842
	                   x: 0
	                   y: 0
	                mode: MODE 0000023c
	 rotation/reflection: Rotate_0
	             outputs: (1)
 0.29: 					  32 bytes <-- X11 Server
					 ..............REPLY: RandrReply
					          RANDRREPLY: SetCrtcConfig
					              status: 00
					           timestamp: TIM 0120760a
[snip]
20.13: Client 2 -->    8 bytes
	 ............REQUEST: RandrRequest
	        RANDRREQUEST: RandrGetCrtcTransform
	                crtc: CRTC 00000239
20.13: 					 104 bytes <-- X11 Server 2
					 ..............REPLY: RandrReply
					          RANDRREPLY: GetCrtcTransform
					   pending transform:     0.50    0.00    0.00
					                          0.00    0.50    0.00
					                          0.00    0.00    1.00

					      has transforms: True
					   current transform:     0.50    0.00    0.00
					                          0.00    0.50    0.00
					                          0.00    0.00    1.00

					 current filter name: "^@^@^@^@bili"
[snip]

This looks like a wrong offset somewhere in the XRandR decoder I think.
Comment 1 Alan Coopersmith 2013-06-29 23:38:40 UTC
Yes, a 4-byte padding field seems to have been missed between the transform
matrices and the strings for the filters.

http://patchwork.freedesktop.org/patch/13935/
Comment 2 Alan Coopersmith 2013-07-06 03:57:02 UTC
Pushed to git master for next release:

To ssh://git.freedesktop.org/git/xorg/app/xscope
   4af7275..53b0bb0  master -> master

Thanks for reporting this issue!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.