Bug 66388 wrong output for filter names in RandR GetCrtcTransform reply

https://bugs.freedesktop.org/show_bug.cgi?id=66388

Had missed a 4 byte padding field between the transform data and
the start of the filter name fields.

The offset to the strings now matches the 96 bytes specified for
sz_xRRGetCrtcTransformReply in <X11/extensions/randrproto.h> and
the test case now reports:
                         pending filter name: "bilinear"
instead of:
                         current filter name: "^@^@^@^@bili"

Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>